# wardenhub

./: .gitignore  LICENSE  README.md  docker-compose.yml
agent/: pyproject.toml
agent/systemd/: wardenhub-agent.timer
agent/wardenhub_agent/: cli.py  config.py  models.py  pusher.py  runner.py
agent/wardenhub_agent/providers/: __init__.py  base.py  lynis.py  network.py
ansible/: .gitignore  install.yml  inventory.example.yml
ansible/roles/wardenhub_agent/files/: wardenhub-agent.service  wardenhub-agent.timer
ansible/roles/wardenhub_agent/handlers/: main.yml
ansible/roles/wardenhub_agent/tasks/: main.yml
ansible/roles/wardenhub_agent/templates/: agent.yaml.j2
config/: agent.yaml.example  alert_rules.yml  alertmanager.yml  coordinator.yaml  prometheus.yml
config/grafana/dashboards/: overview.json
config/grafana/provisioning/: dashboards.yaml  datasources.yaml
coordinator/: Dockerfile  pyproject.toml
coordinator/wardenhub_coordinator/: app.py  cleanup.py  config.py  db.py  scheduler.py
coordinator/wardenhub_coordinator/providers/: base.py  proxmox_remote.py
tests/agent/: conftest.py  test_config.py  test_pusher.py  test_runner.py
tests/agent/fixtures/: ss_output_clean.txt  ss_output_with_mgmt.txt
tests/agent/providers/: test_lynis.py  test_network.py
tests/coordinator/: test_app.py  test_cleanup.py
